web-ui/src/main/resources/catalog/style/gn.less
/* ... */
.dropdown-menu {
  li {
    cursor: pointer !important;
  }
  li.disabled {
    cursor: not-allowed !important;
  }
  li.disabled {
    a {
      pointer-events: none;
    }
  }
}

.gn-popup {
  display: none;
  overflow: hidden;
  min-width: 200px;
  max-width: 600px;
  min-height: 100px;
  max-height: ~"calc(100% - 89px)";
  z-index: 2000;
}

.onlinesrc-popup, .gn-modal-lg {
  max-width: none;
  max-height: none;
  display: none;
  .modal-content {
    width: 90vw;
    max-height: 90vh;
    .modal-body {
      max-height: 76vh;
      overflow: auto;
      min-height: 500px;
      .gn-modal-content {
        // height of modal body - 2 * padding - height of button(s)
        max-height: calc(~"76vh - 30px - 30px");
        overflow: auto;
      }
    }
  }
  .modal-dialog {
    margin: 10px 5vw;

    .list-group-item {
      word-wrap: break-word;
    }
  }
}
.gn-save-invalid-modal {
  max-width: none;
  max-height: none;
}
img.thumb-small {
  max-width: 100%;
  max-height: 80px;
  min-height: 40px;
}
div.thumb-small {
  max-width: 100%;
  max-height: 80px;
  min-height: 80px;
  background-repeat: no-repeat;
  background-size: cover;
}
.gn-list-thumb {
  position: relative;
  margin: 5px;
  width: 32%;
  padding: 0;
  border-radius: 2px;
  a.onlinesrc-remove {
    position: absolute;
    z-index: 99;
    top: 0px;
    right: 0px;
  }
  a.onlinesrc-edit {
    position: absolute;
    z-index: 99;
    top: 0px;
    right: 20px;
  }
  a {
    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
  }
}
.gn-layers-grid-container {
  overflow:auto;
  max-height:200px;
  font-size: small;

  tr.success {
    td {
      font-weight: bold;
    }
  }
}
.gn-layers-grid-container tr {
  cursor: pointer;
}
.gn-layers-grid-container .table > thead > tr > td.active tr.active > td {
  color: red;
  background-color: #428bca;
}

/* typeahead styles */

.tt-query {
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}


.tt-menu {
  width: 422px;
  margin-top: 4px;
  padding: 8px 0;
  background-color: #fff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0, 0, 0, 0.2);
  -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
          border-radius: 8px;
  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
          box-shadow: 0 5px 10px rgba(0,0,0,.2);
  /* Limit typeahead height to a percentage of the
     viewport height in order to not have to scroll
     too much when the autocompletion list is long.
     User should be able to see the full list on the
     screen and then use the scrollbar in the menu. */
  overflow: auto;
  max-height: 70vh;
  width: inherit;
}

.tt-suggestion {
  padding: 3px 20px;
  font-size: 1em;
  line-height: 24px;
}

.tt-suggestion.tt-is-under-cursor {
  color: #fff;
  background-color: #428bca;

}

.tt-suggestion p {
  margin: 0;
}


.tt-hint {
  color: #999;
  width: 100% !important;
  border: none !important;
}

.tt-suggestion.tt-cursor {
  color: #fff;
  background-color: #428bca;
  cursor: pointer;
}

.bootstrap-tagsinput {
  width: 100%;
}
/* No border for typeahead in tagsinput */
.bootstrap-tagsinput .tt-input {
  width: 100% !important;
  border: none !important;
}

span.twitter-typeahead {
  display: block !important;
}

.row {
    margin: auto 0px;
}

@gn-popup-max-height: 400px;

[gn-popup] {
  display: none;
  min-width: 200px;
  max-width: 600px;
  min-height: 100px;
  max-height: ~"calc(100% - 89px)";
  z-index: 2000;

  @media (max-width: @screen-tablet) {
    z-index: 1500;
    left: 2%;
    right: 2%;
    top: 2%;
    bottom: 2%;
    max-height: none;
    max-width: none;
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
  }
  @media (max-width: @screen-phone) {
    position: fixed !important;
    overflow: hidden;
  }
}

.gn-popup-content {
  overflow: auto;
  max-width: inherit;
  max-height: ~"calc(100% - 149px)";
  font-size: 12px;
  @media (max-width: @screen-phone) {
    width: 100%;
    height: auto;
    max-height: none;
    position: absolute;
    top: 36px;
    bottom: 10px;
    overflow-x: hidden;
    overflow-y: auto;
    table {
      width: 100% !important;
      td {
        vertical-align: top;
      }
    }
  }
}
.fileupload-buttonbar .btn, .fileupload-buttonbar .toggle {
  margin-bottom: 5px;
}
.fileinput-button {
  position: relative;
  overflow: hidden;
}
.fileinput-button input {
  position: absolute;
  top: 0;
  right: 0;
  margin: 0;
  opacity: 0;
  -ms-filter: 'alpha(opacity=0)';
  font-size: 200px;
  direction: ltr;
  cursor: pointer;
}
input[type=file] {
  display: block;
}

/* alerts */
.gn-alerts {
  position: absolute;
  top: 1em;
  left: 50%;
  width: 300px;
  margin-left: -150px;
  text-align: center;
  z-index: 1000;
}

.gn-recordtype-n:before { content: @fa-var-file-text }
.gn-recordtype-s:before { content: @fa-var-bookmark }
.gn-recordtype-y:before { content: @fa-var-file-o }
.gn-recordtype-t:before { content: @fa-var-bookmark-o }

[data-gn-slide-toggle] {
  padding-left: 20px;
  cursor: pointer;
}
[data-gn-slide-toggle]:before {
  content: "\f0d7";
  font-family: FontAwesome;
  font-style: normal;
  font-weight: normal;
  text-decoration: inherit;
  position: absolute;
  margin-left: -14px;
  font-size: 16px;
}
[data-gn-slide-toggle].collapsed:before {
  content: "\f0da"
}
legend[data-gn-slide-toggle] {
  border: none;
  color: #333333;
}
legend[data-gn-slide-toggle]:before {
  margin-top: 3px;
}

i.fa-times.delete {
  vertical-align: top;
}
i.fa-times.delete:hover {
    color:  #a94442;
}
/* ... */

